[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
url = "2.2"
http-downloader = { version = "0.3.2", features = ["all-extensions"] }
indicatif = "0.16"
